# agent-workbench

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.agent-workbench/: AGENTS.md  CLAUDE.md  agent-task-pack.md  opencode.json
.agent-workbench/.codex/: AGENTS.md
.agent-workbench/.cursor/rules/: agent-workbench.md
.github/ISSUE_TEMPLATE/: agent-workbench-report.yml
.github/workflows/: ci.yml  daily-trend.yml
data/snapshots/: live-smoke.json  product-direction-live.json  trend-live-smoke.json  trend-product-live.json
data/star_history/: Xiao-rx__agent-workbench.jsonl
docs/: launch-kit.md  release-v0.1.0.md  release-v0.2.0.md  release-v0.3.0.md  release-v0.4.0.md  release-v0.5.0.md  release-v0.6.0.md  release-v0.7.0.md  release-v0.8.0.md
examples/python-cli/agent-workbench/: AGENTS.md  agent-task-pack.md
examples/python-cli/source/: README.md  pyproject.toml
examples/typescript-cli/agent-workbench/: AGENTS.md  agent-task-pack.md
reports/: daily-brief.md  daily-decisions.json  local-verification.md  product-direction-brief.md  product-direction-decisions.json
scripts/: build_examples.py  publish.ps1  verify_remote.ps1
src/agent_workbench/: __init__.py  checks.py  cli.py  generator.py  models.py  scanner.py
src/github_trend_lab/: __init__.py  agents.py  cli.py  config.py  demo_data.py  git_ops.py  github_api.py  growth_loop.py  history.py  insight.py  models.py  pipeline.py  quality.py  reporting.py  storage.py  verification.py
tests/: test_agent_workbench.py  test_agents.py  test_ci_workflow.py  test_env_example.py  test_examples.py  test_github_api.py  test_growth_loop.py  test_history.py  test_insight.py  test_issue_templates.py  test_launch_kit.py  test_models_and_storage.py  test_pipeline.py  test_quality.py  test_readme.py  test_reporting.py  test_verification.py
(+7 files in other folders)
