[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workbench"
version = "0.1.0"
description = "Generate AGENTS.md and an agent task pack for any repository with one command."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agent-workbench maintainers" }]
dependencies = []

[project.scripts]
agent-workbench = "agent_workbench.cli:main"
trend-lab = "github_trend_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
github_trend_lab = ["py.typed"]
agent_workbench = ["py.typed"]
