[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workbench"
version = "0.3.0"
description = "Generate AGENTS.md and an agent task pack for any repository with one command."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agent-workbench maintainers" }]
dependencies = []
keywords = ["agents", "ai", "cli", "devtools", "codex", "claude-code", "cursor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[project.scripts]
agent-workbench = "agent_workbench.cli:main"
trend-lab = "github_trend_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
github_trend_lab = ["py.typed"]
agent_workbench = ["py.typed"]
